Bug 287153 - Adding URLs to adblock list fails in konqueror
Summary: Adding URLs to adblock list fails in konqueror
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
: 302920 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-21 12:04 UTC by Thomas Haenig
Modified: 2012-09-05 21:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Haenig 2011-11-21 12:04:27 UTC
Version:           unspecified
OS:                Linux

when selecting "block images from URL xyz" from respective context menu while
the cursor is hovering over such an image the entry appearing in the blocked
URLs list simply reads 'http:/*'

Reproducible: Didn't try

Steps to Reproduce:
1. open a website with not yet blocked ads
2. choose the image of such an ad
3. right click to open konqueror's context menu
4. select "block images from URL (here e.g. 'http://www.xyz.de)
5. check with settings => adblock => manual filter

Actual Results:  
the new entry reads 'http:/*'

Expected Results:  
the entry should read 'http://www.xyz.de/*'

System is OpenSuSE 12.1, konqueror: Version 4.7.2 (4.7.2) "release 5"
Comment 1 Thomas Haenig 2011-11-21 12:11:26 UTC
Rreproducible: always
Comment 2 Dawit Alemayehu 2011-11-27 19:57:46 UTC
which browser engine were you using ? khtml or webkit ?
Comment 3 Thomas Haenig 2011-11-28 06:14:49 UTC
when using webkit it goes wrong, when using khtml everything works correct
Comment 4 Dawit Alemayehu 2011-11-28 14:41:56 UTC
Git commit e2793f6c163863b209e71640d93858918e521486 by Dawit Alemayehu.
Committed on 28/11/2011 at 10:40.
Pushed by adawit into branch 'master'.

Correctly set the host that is going to be blocked by the ad filter.

BUG: 287153

M  +1    -1    src/kwebkitpart_ext.cpp

http://commits.kde.org/kwebkitpart/e2793f6c163863b209e71640d93858918e521486
Comment 5 Dawit Alemayehu 2012-07-16 14:12:27 UTC
*** Bug 302920 has been marked as a duplicate of this bug. ***