Correctly set the host that is going to be blocked by the ad filter.

BUG: 287153